Fix Routes and CRUD Operations

--- a/cable_service/www/customers.html
+++ b/cable_service/www/customers.html
@@ -15,10 +15,9 @@
                     <p class="text-muted mb-0 fs-5">Manage all your customers and their services</p>
                 </div>
                 <div class="d-flex gap-2">
-                    <!-- Button triggers Add Customer modal -->
-                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCustomerModal">
+                    <a href="/add-customer" class="btn btn-primary">
                         <i class="fas fa-user-plus me-2"></i>Add New Customer
-                    </button>
+                    </a>
                     <button class="btn btn-secondary" onclick="location.reload()">
                         <i class="fas fa-sync-alt me-2"></i>Refresh
                     </button>
@@ -50,50 +49,6 @@
         </div>
     </div>
     {% else %}
-
-    <!-- Filters -->
-    <div class="row mb-4">
-        <div class="col-12">
-            <div class="card-modern">
-                <div class="card-body">
-                    <div class="row g-3">
-                        <div class="col-md-4">
-                            <label class="form-label">Search Customers</label>
-                            <div class="input-group">
-                                <span class="input-group-text"><i class="fas fa-search"></i></span>
-                                <input type="text" class="form-control" id="searchCustomer" placeholder="Search by name or phone...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <label class="form-label">Service Status</label>
-                            <select class="form-control" id="statusFilter">
-                                <option value="">All Status</option>
-                                <option value="Active">Active</option>
-                                <option value="Pending">Pending</option>
-                                <option value="Inactive">Inactive</option>
-                                <option value="Suspended">Suspended</option>
-                            </select>
-                        </div>
-                        <div class="col-md-3">
-                            <label class="form-label">Payment Status</label>
-                            <select class="form-control" id="paymentFilter">
-                                <option value="">All Payments</option>
-                                <option value="Paid">Paid</option>
-                                <option value="Pending">Pending</option>
-                                <option value="Partial">Partial</option>
-                            </select>
-                        </div>
-                        <div class="col-md-2">
-                            <label class="form-label">&nbsp;</label>
-                            <button class="btn btn-outline-primary w-100" onclick="clearFilters()">
-                                <i class="fas fa-times me-2"></i>Clear
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Customer Stats -->
     <div class="row mb-5">
@@ -264,9 +219,9 @@
                     </div>
                     <h4 class="fw-bold mb-3">No Customers Yet</h4>
                     <p class="text-muted mb-4 fs-5">Start by adding your first customer to the system</p>
-                    <button class="btn btn-primary btn-lg px-5" data-bs-toggle="modal" data-bs-target="#addCustomerModal">
+                    <a href="/add-customer" class="btn btn-primary btn-lg px-5">
                         <i class="fas fa-user-plus me-2"></i>Add First Customer
-                    </button>
+                    </a>
                 </div>
             </div>
             {% endif %}
@@ -275,82 +230,6 @@
     {% endif %}
 </div>
 
-<!-- Add Customer Modal -->
-<div class="modal fade" id="addCustomerModal" tabindex="-1" aria-labelledby="addCustomerModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title fw-bold" id="addCustomerModalLabel">
-                    <i class="fas fa-user-plus me-2"></i>Add New Customer
-                </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form id="addCustomerForm">
-                <div class="modal-body">
-                    <div class="row g-3">
-                        <div class="col-md-6">
-                            <label for="customer_name" class="form-label">Customer Name *</label>
-                            <input type="text" class="form-control" id="customer_name" name="customer_name" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="phone" class="form-label">Phone *</label>
-                            <input type="text" class="form-control" id="phone" name="phone" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" name="email">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="city" class="form-label">City</label>
-                            <input type="text" class="form-control" id="city" name="city">
-                        </div>
-                        <div class="col-12">
-                            <label for="address" class="form-label">Address *</label>
-                            <textarea class="form-control" id="address" name="address" rows="3" required></textarea>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="cnic" class="form-label">CNIC *</label>
-                            <input type="text" class="form-control" id="cnic" name="cnic" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="payment_mode" class="form-label">Payment Mode</label>
-                            <select class="form-control" id="payment_mode" name="payment_mode">
-                                <option value="Cash" selected>Cash</option>
-                                <option value="Bank Transfer">Bank Transfer</option>
-                                <option value="Card">Card</option>
-                                <option value="Online">Online</option>
-                            </select>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="payment_status" class="form-label">Payment Status</label>
-                            <select class="form-control" id="payment_status" name="payment_status">
-                                <option value="Pending" selected>Pending</option>
-                                <option value="Paid">Paid</option>
-                                <option value="Partial">Partial</option>
-                            </select>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="service_status" class="form-label">Service Status</label>
-                            <select class="form-control" id="service_status" name="service_status" disabled>
-                                <option value="Pending" selected>Pending</option>
-                            </select>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="payment_date" class="form-label">Payment Date</label>
-                            <input type="date" class="form-control" id="payment_date" name="payment_date" value="{{ frappe.utils.nowdate() }}">
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary">
-                        <i class="fas fa-save me-2"></i>Save Customer
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
 <!-- Payment Update Modal -->
 <div class="modal fade" id="paymentModal" tabindex="-1">
     <div class="modal-dialog">
@@ -442,52 +321,59 @@
 
 {% block page_scripts %}
 <script>
-// Add Customer form submission
-document.getElementById('addCustomerForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-
-    const submitBtn = this.querySelector('button[type="submit"]');
-    setLoading(submitBtn, true);
-
-    const formData = new FormData(this);
-
-    const data = {
-        doctype: 'Customer Profile',
-        customer_name: formData.get('customer_name'),
-        phone: formData.get('phone'),
-        email: formData.get('email'),
-        city: formData.get('city'),
-        address: formData.get('address'),
-        cnic: formData.get('cnic'),
-        payment_mode: formData.get('payment_mode'),
-        payment_status: formData.get('payment_status'),
-        service_status: 'Pending',  // fixed initial status
-        payment_date: formData.get('payment_date'),
-        payment_amount: 0,
-        total_amount: 0,
-        created_by: frappe.session.user
-    };
-
-    frappe.call({
-        method: 'frappe.client.insert',
-        args: { doc: data },
-        callback: function(r) {
-            setLoading(submitBtn, false);
-            if (r.message) {
-                showToast('Customer added successfully!', 'success');
-                bootstrap.Modal.getInstance(document.getElementById('addCustomerModal')).hide();
-                setTimeout(() => location.reload(), 1000);
-            } else {
-                showToast('Failed to add customer', 'danger');
-            }
+// Initialize frappe session if not available
+if (typeof frappe === 'undefined') {
+    window.frappe = {
+        session: {
+            user: '{{ frappe.session.user }}'
         },
-        error: function(r) {
-            setLoading(submitBtn, false);
-            const errorMsg = r.message || 'Error adding customer';
-            showToast(errorMsg, 'danger');
+        call: function(options) {
+            const url = '/api/method/' + options.method;
+            const data = {
+                ...options.args
+            };
+            
+            fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': 'application/json',
+                    'X-Frappe-CSRF-Token': getCookie('csrf_token')
+                },
+                body: JSON.stringify(data)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (options.callback) {
+                    options.callback(data);
+                }
+            })
+            .catch(error => {
+                console.error('API Error:', error);
+                if (options.error) {
+                    options.error(error);
+                } else {
+                    showToast('An error occurred. Please try again.', 'danger');
+                }
+            });
         }
-    });
-});
+    };
+}
+
+function getCookie(name) {
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
 
 function updatePayment(customerId) {
     document.getElementById('customerId').value = customerId;
@@ -502,14 +388,7 @@ function toggleService(customerId, currentStatus) {
 }
 
 function viewCustomer(customerId) {
-    window.open('/app/customer-profile/' + customerId, '_blank');
-}
-
-function clearFilters() {
-    document.getElementById('searchCustomer').value = '';
-    document.getElementById('statusFilter').value = '';
-    document.getElementById('paymentFilter').value = '';
-    filterTable();
+    window.location.href = '/user-profile?customer_id=' + customerId;
 }
 
 // Payment form submission
@@ -580,86 +459,5 @@ document.getElementById('serviceForm').addEventListener('submit', function(e) {
         }
     });
 });
-
-// Search and filter functionality
-document.getElementById('searchCustomer').addEventListener('input', filterTable);
-document.getElementById('statusFilter').addEventListener('change', filterTable);
-document.getElementById('paymentFilter').addEventListener('change', filterTable);
-
-function filterTable() {
-    const searchTerm = document.getElementById('searchCustomer').value.toLowerCase();
-    const statusFilter = document.getElementById('statusFilter').value;
-    const paymentFilter = document.getElementById('paymentFilter').value;
-    const rows = document.querySelectorAll('#customerTable tbody tr');
-
-    let visibleCount = 0;
-
-    rows.forEach(row => {
-        const name = row.cells[0].textContent.toLowerCase();
-        const phone = row.cells[1].textContent.toLowerCase();
-        const status = row.cells[3].textContent.trim();
-        const payment = row.cells[4].textContent.trim();
-
-        const matchesSearch = name.includes(searchTerm) || phone.includes(searchTerm);
-        const matchesStatus = !statusFilter || status.includes(statusFilter);
-        const matchesPayment = !paymentFilter || payment.includes(paymentFilter);
-
-        const isVisible = matchesSearch && matchesStatus && matchesPayment;
-        row.style.display = isVisible ? '' : 'none';
-
-        if (isVisible) visibleCount++;
-    });
-
-    // Show/hide no results message
-    const tbody = document.querySelector('#customerTable tbody');
-    let noResultsRow = tbody.querySelector('.no-results-row');
-
-    if (visibleCount === 0 && rows.length > 0) {
-        if (!noResultsRow) {
-            noResultsRow = document.createElement('tr');
-            noResultsRow.className = 'no-results-row';
-            noResultsRow.innerHTML = `
-                <td colspan="7" class="text-center py-4">
-                    <i class="fas fa-search fa-2x text-muted mb-2"></i>
-                    <div class="fw-medium">No customers found</div>
-                    <small class="text-muted">Try adjusting your search criteria</small>
-                </td>
-            `;
-            tbody.appendChild(noResultsRow);
-        }
-        noResultsRow.style.display = '';
-    } else if (noResultsRow) {
-        noResultsRow.style.display = 'none';
-    }
-}
-
-// Helper UI functions used in multiple places:
-function setLoading(button, loading) {
-    if (loading) {
-        button.disabled = true;
-        button.innerHTML = '<span class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>Saving...';
-    } else {
-        button.disabled = false;
-        button.innerHTML = '<i class="fas fa-save me-2"></i>Save';
-    }
-}
-
-function showToast(message, type='info') {
-    const toastEl = document.createElement('div');
-    toastEl.className = `toast align-items-center text-bg-${type} border-0`;
-    toastEl.setAttribute('role', 'alert');
-    toastEl.setAttribute('aria-live', 'assertive');
-    toastEl.setAttribute('aria-atomic', 'true');
-    toastEl.innerHTML = `
-        <div class="d-flex">
-            <div class="toast-body">${message}</div>
-            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>`;
-    document.body.appendChild(toastEl);
-    const toast = new bootstrap.Toast(toastEl);
-    toast.show();
-    toastEl.addEventListener('hidden.bs.toast', () => toastEl.remove());
-}
-
 </script>
 {% endblock %}
